databases/py-duckdb_engine: new port
Basic SQLAlchemy driver for DuckDB

Once you've installed this package, you should be able to just use it,
as SQLAlchemy does a python path search

WWW: https://github.com/Mause/duckdb_engine

PR:		278138

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -768,6 +768,7 @@
     SUBDIR += py-dbt-snowflake
     SUBDIR += py-dbutils
     SUBDIR += py-duckdb
+    SUBDIR += py-duckdb_engine
     SUBDIR += py-fakeredis
     SUBDIR += py-fastapi-users-db-ormar
     SUBDIR += py-fastparquet
