www/lua-resty-session3: port sticking to version 3
This is based upon www/lua-resty-session (v4), but is needed for
lua-resty-openidc.

The version 3.x is pinned in the lua-resty-openidc dependencies:
    https://github.com/zmartzone/lua-resty-openidc/blob/9f3a4fcade930f6f38ee0cb43cabf50cebffbcc9/lua-resty-openidc-1.7.6-3.rockspec#L27

There is apparently currently no clear plan on when/if lua-resty-openidc
will be updated to include changes for lua-resty-session 4.X, see
discussions on
    https://github.com/zmartzone/lua-resty-openidc/issues/480

Additionally to what the author submitted some changes by me:
 - add conflicts with www/lua-resty-session
 - give up maintainership of www/lua-resty-session

PR:		281142

--- a/www/Makefile
+++ b/www/Makefile
@@ -336,6 +336,7 @@
     SUBDIR += lua-resty-http
     SUBDIR += lua-resty-lrucache
     SUBDIR += lua-resty-session
+    SUBDIR += lua-resty-session3
     SUBDIR += luakit
     SUBDIR += luakit-devel
     SUBDIR += lux
