--- a/sysutils/bhyvemgr/Makefile
+++ b/sysutils/bhyvemgr/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	bhyvemgr
 DISTVERSIONPREFIX=	v
 PORTVERSION=	1.0.1
+PORTREVISION=	1
 CATEGORIES=	sysutils
 PKGNAMESUFFIX=	${LAZARUS_PKGNAMESUFFIX}
 
@@ -24,7 +25,7 @@ GH_ACCOUNT=	alonsobsd
 
 LAZARUS_PROJECT_FILES=	bhyvemgr.lpi
 
-LAZBUILD_ARGS=		-d
+LAZBUILD_ARGS=		--bm=Release -d
 
 gtk2_CONFLICTS_INSTALL=	${PORTNAME}-qt5 ${PORTNAME}-qt6
 qt5_CONFLICTS_INSTALL=	${PORTNAME}-gtk2 ${PORTNAME}-qt6
