--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,22 +1,22 @@
 PORTNAME=	thunderbird
-DISTVERSION=	115.15.0
+DISTVERSION=	128.2.0
 CATEGORIES=	mail news net-im wayland
-MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
-DISTFILES=	${DISTNAME}.source${EXTRACT_SUFX}
+MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}esr/source \
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}esr-candidates/build1/source
+DISTFILES=	${DISTNAME}esr.source${EXTRACT_SUFX}
 
 MAINTAINER=	gecko@FreeBSD.org
 COMMENT=	Mozilla Thunderbird is standalone mail and news that stands above
 WWW=		https://www.mozilla.com/thunderbird/
 
 BUILD_DEPENDS=	nspr>=4.32:devel/nspr \
-		nss>=3.90:security/nss \
+		nss>=3.101:security/nss \
 		libevent>=2.1.8:devel/libevent \
-		harfbuzz>=7.3.0:print/harfbuzz \
+		harfbuzz>=8.5.0:print/harfbuzz \
 		graphite2>=1.3.14:graphics/graphite2 \
-		png>=1.6.39:graphics/png \
+		png>=1.6.43:graphics/png \
 		dav1d>=1.0.0:multimedia/dav1d \
-		libvpx>=1.13.0:multimedia/libvpx \
+		libvpx>=1.14.0:multimedia/libvpx \
 		${PYTHON_PKGNAMEPREFIX}sqlite3>0:databases/py-sqlite3@${PY_FLAVOR} \
 		v4l_compat>0:multimedia/v4l_compat \
 		autoconf2.13:devel/autoconf2.13 \
@@ -26,7 +26,6 @@ BUILD_DEPENDS=	nspr>=4.32:devel/nspr \
 LIB_DEPENDS=	libjson-c.so:devel/json-c \
 		libbotan-2.so:security/botan2
 
-SSP_UNSAFE=	yes
 USE_GECKO=	gecko
 # cannot use system icu: calendar is completely broken by
 # https://unicode-org.atlassian.net/browse/ICU-22132 (fix not in 74.1)
