sysutils/fusefs-ufs: FUSE driver for FreeBSD's UFSv2
A FUSE file system driver for FreeBSD's UFSv2.

Features:

 - Read support for FreeBSD UFSv2
 - Extended Attributes (no ACLs)
 - Bi-Endian support (eg. mounting big endian FS on little endian system)

WWW: https://github.com/realchonk/fuse-ufs

Event:		GSoC 2024

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -480,6 +480,7 @@
     SUBDIR += fusefs-sqlfs
     SUBDIR += fusefs-squashfuse
     SUBDIR += fusefs-sshfs
+    SUBDIR += fusefs-ufs
     SUBDIR += fusefs-unionfs
     SUBDIR += fusefs-unreliablefs
     SUBDIR += fusefs-webdavfs
