--- a/net-mgmt/p5-OSLV-Monitor/Makefile
+++ b/net-mgmt/p5-OSLV-Monitor/Makefile
@@ -1,7 +1,9 @@
 PORTNAME=	OSLV-Monitor
 PORTVERSION=	0.0.1
+PORTREVISION=	1
 CATEGORIES=	net-mgmt
-MASTER_SITES=	#
+MASTER_SITES=	CPAN
+MASTER_SITE_SUBDIR=	CPAN:VVELOX
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	dan@langille.org
@@ -18,8 +20,6 @@ RUN_DEPENDS=	p5-Clone>0:devel/p5-Clone \
 
 USES=		perl5
 USE_PERL5=	configure
-USE_GITHUB=	yes
-GH_ACCOUNT=	VVelox
 NO_BUILD=	YES
 
 SUB_FILES=	pkg-message
