devel/radicle: New port: Sovereign code forge built on Git
Radicle is an open source, peer-to-peer code collaboration stack built
on Git. Unlike centralized code hosting platforms, there is no single
entity controlling the network. Repositories are replicated across
peers in a decentralized manner, and users are in full control of
their data and workflow.

WWW: https://radicle.xyz/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6213,6 +6213,7 @@
     SUBDIR += rabs
     SUBDIR += radare2
     SUBDIR += radian
+    SUBDIR += radicle
     SUBDIR += ragel
     SUBDIR += raknet
     SUBDIR += random123
