devel/py-iterable-io: New port
iterable-io is a small Python library that provides an adapter so that
it's possible to read from iterable objects in the same way as file-like
objects.

WWW: https://github.com/pR0Ps/iterable-io

PR:		279304

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5004,6 +5004,7 @@
     SUBDIR += py-itanium_demangler
     SUBDIR += py-itemadapter
     SUBDIR += py-itemloaders
+    SUBDIR += py-iterable-io
     SUBDIR += py-iteration-utilities
     SUBDIR += py-itertree
     SUBDIR += py-itypes
