textproc/py-urlscan: Add new port
Urlscan parses an email message or file and scans it for URLs and email
addresses. It then displays the URLs and their context within the message,
and allows you to choose one or more URLs to send to your Web browser.
Alternatively, it send a list of all URLs to stdout.

https://github.com/firecat53/urlscan

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1670,6 +1670,7 @@
     SUBDIR += py-ufal.udpipe
     SUBDIR += py-unicodeitplus
     SUBDIR += py-untangle
+    SUBDIR += py-urlscan
     SUBDIR += py-wasabi
     SUBDIR += py-wavedrom
     SUBDIR += py-wcmatch
