--- a/devel/py-PyGithub/Makefile
+++ b/devel/py-PyGithub/Makefile
@@ -1,9 +1,9 @@
 PORTNAME=	PyGithub
-DISTVERSION=	2.3.0
+DISTVERSION=	2.4.0
 CATEGORIES=	devel www python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
-DISTNAME=	PyGithub-${PORTVERSION}
+DISTNAME=	${PORTNAME:tl}-${PORTVERSION}
 
 MAINTAINER=	bofh@FreeBSD.org
 COMMENT=	Python library implementing the full GitHub API v3
