--- a/devel/py-tox/Makefile
+++ b/devel/py-tox/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	tox
-PORTVERSION=	4.12.0
+DISTVERSION=	4.12.1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
