--- a/devel/py-awesomeversion/Makefile
+++ b/devel/py-awesomeversion/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Python module to deal with versions
 WWW=		https://github.com/ludeeus/awesomeversion
 
