--- a/devel/py-backports.zoneinfo/Makefile
+++ b/devel/py-backports.zoneinfo/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Backport of the standard library module zoneinfo
 WWW=		https://github.com/pganssle/zoneinfo
 
