--- a/devel/py-colorama/Makefile
+++ b/devel/py-colorama/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Cross-platform API to print colored terminal text from Python applications
 WWW=		https://github.com/tartley/colorama
 
