--- a/devel/py-decorator/Makefile
+++ b/devel/py-decorator/Makefile
@@ -4,7 +4,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Decorators for Humans
 WWW=		https://github.com/micheles/decorator
 
