devel/py-gitpython: drop maintainership

--- a/devel/py-gitpython/Makefile
+++ b/devel/py-gitpython/Makefile
@@ -5,7 +5,7 @@ MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	GitPython-${PORTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Python Git Library
 WWW=		https://github.com/gitpython-developers/GitPython
 
