--- a/devel/py-pycognito/Makefile
+++ b/devel/py-pycognito/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Makes working with AWS Cognito easier for Python developers
 WWW=		https://github.com/pvizeli/pycognito
 
