--- a/games/py-pysol-cards/Makefile
+++ b/games/py-pysol-cards/Makefile
@@ -5,7 +5,7 @@ MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	pysol_cards-${PORTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Deal PySol FC Cards
 WWW=		https://pypi.org/project/pysol-cards/
 
