math/R-cran-gsl: drop maintainership

--- a/math/R-cran-gsl/Makefile
+++ b/math/R-cran-gsl/Makefile
@@ -4,7 +4,7 @@ PORTREVISION=	1
 CATEGORIES=	math
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ygy@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Wrapper for the Gnu Scientific Library
 WWW=		https://github.com/RobinHankin/gsl
 
