--- a/devel/R-cran-remotes/Makefile
+++ b/devel/R-cran-remotes/Makefile
@@ -3,7 +3,7 @@ DISTVERSION=	2.4.2.1
 CATEGORIES=	devel
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	uzsolt@FreeBSD.org
 COMMENT=	R Package Installation from Remote Repositories, Including 'GitHub'
 WWW=		https://remotes.r-lib.org
 
