--- a/devel/R-cran-crayon/Makefile
+++ b/devel/R-cran-crayon/Makefile
@@ -4,7 +4,7 @@ PORTREVISION=	1
 CATEGORIES=	devel
 DISTNAME=	${PORTNAME}_${DISTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	uzsolt@FreeBSD.org
 COMMENT=	Colored Terminal Output
 WWW=		https://github.com/r-lib/crayon#readme
 
