--- a/astro/py-astral/Makefile
+++ b/astro/py-astral/Makefile
@@ -5,7 +5,7 @@ MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	${PORTNAME}-${PORTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Calculations for the position of the sun and moon
 WWW=		https://github.com/sffjunkie/astral
 
