--- a/devel/py-gitpython/Makefile
+++ b/devel/py-gitpython/Makefile
@@ -5,7 +5,7 @@ MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 DISTNAME=	GitPython-${PORTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Python Git Library
 WWW=		https://github.com/gitpython-developers/GitPython
 
