mail/pizauth: Add new port
pizauth is a simple program for requesting, showing, and refreshing OAuth2
access tokens. pizauth is formed of two components: a persistent server which
interacts with the user to request tokens, and refreshes them as necessary; and
a command-line interface which can be used by programs such as fdm, neomutt, or
msmtp to authenticate with OAuth2.

https://tratt.net/laurie/src/pizauth/

--- a/mail/Makefile
+++ b/mail/Makefile
@@ -474,6 +474,7 @@
     SUBDIR += phpmailer
     SUBDIR += phpmailer6
     SUBDIR += pine-pgp-filters
+    SUBDIR += pizauth
     SUBDIR += pm-lib
     SUBDIR += policyd2
     SUBDIR += popa3d
