devel/gitea-act_runner: New port
Act runner is a runner for Gitea based on Gitea fork of act.

This is a fork of the original act runner developed and maintained by Gitea
community and intended to be used with Gitea only.

PLEASE NOTE that this port still does not ship with a rc script as this is
a WIP at the moment.

WWW: https://gitea.com/gitea/act_runner/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -837,6 +837,7 @@
     SUBDIR += git-tui
     SUBDIR += git-workspace
     SUBDIR += gitaly
+    SUBDIR += gitea-act_runner
     SUBDIR += gitflow
     SUBDIR += gitg
     SUBDIR += github-backup-utils
