www/gitlab: update to 17.3.3
Added a unique PORTREVISION tag to be in sync with all gitlab related ports.
Please increase in www/gitlab/Makefile.common GITLAB_PORTREVISION if required.

--- a/www/gitlab/Makefile.common
+++ b/www/gitlab/Makefile.common
@@ -1,4 +1,5 @@
-GITLAB_VERSION=	17.3.2
+GITLAB_VERSION=		17.3.3
+GITLAB_PORTREVISION=	0
 
 # Git version gitaly should use (from gitlab mirror)
 # Find current tag from Makefile and .gitlab-ci.yaml
