textproc/py-mdx_wikilink_plus: New port
Converts wikilinks ([[wikilink]]) to relative links, including support
for GitHub image variant. Absolute links are kept as is (with an
automatic label made from the file path part in the URL if label is not
given explicitly).

You must not use this extension with markdown.extensions.wikilinks. This
extension is designed to provide the functionalities of
markdown.extensions.wikilinks with some extra features. Choose either
one.

WWW: https://github.com/neurobin/mdx_wikilink_plus

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1445,6 +1445,7 @@
     SUBDIR += py-mdformat
     SUBDIR += py-mdit-py-plugins
     SUBDIR += py-mdurl
+    SUBDIR += py-mdx_wikilink_plus
     SUBDIR += py-merge3
     SUBDIR += py-mike
     SUBDIR += py-misaka
