graphics/py-simplejpeg: New port: Simple package for fast JPEG encoding and decoding

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -991,6 +991,7 @@
     SUBDIR += py-s2
     SUBDIR += py-scikit-image
     SUBDIR += py-seqdiag
+    SUBDIR += py-simplejpeg
     SUBDIR += py-sorl-thumbnail
     SUBDIR += py-spectra
     SUBDIR += py-sqlalchemy-imageattach
