www/py-flask-theme: New port
flask-theme provides infrastructure for theming support in Flask
applications. It takes care of:

- loading themes
- rendering templates from themes
- serving static files like CSS and images from themes

WWW: https://github.com/liuliqiang/flask-theme

--- a/www/Makefile
+++ b/www/Makefile
@@ -1674,6 +1674,7 @@
     SUBDIR += py-flask-smorest
     SUBDIR += py-flask-socketio
     SUBDIR += py-flask-sockets
+    SUBDIR += py-flask-theme
     SUBDIR += py-flask-uploads
     SUBDIR += py-flask-wtf
     SUBDIR += py-flower
