devel/py-anywidget: Add py-anywidget 0.9.13
Anywidget uses modern web standards to simplify authoring and distributing
custom Jupyter Widgets.

- Create widgets without complicated cookiecutter templates
- Publish to PyPI like any other Python package
- Prototype within .ipynb or .py files
- Run in Jupyter, JupyterLab, Google Colab, VSCode, marimo and more
- Develop with instant HMR, like modern web frameworks

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4359,6 +4359,7 @@
     SUBDIR += py-anyio3
     SUBDIR += py-anyjson
     SUBDIR += py-anytree
+    SUBDIR += py-anywidget
     SUBDIR += py-apache_conf_parser
     SUBDIR += py-apipkg
     SUBDIR += py-apispec
