devel/py-psygnal: Add py-psygnal 0.11.1
Psygnal (pronounced "signal") is a pure python implementation of the observer
pattern, with the API of Qt-style Signals with (optional) signature and type
checking, and support for threading. It has no dependencies.

This library does not require or use Qt in any way, It simply implements a
similar observer pattern API.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5436,6 +5436,7 @@
     SUBDIR += py-protobuf-compiler
     SUBDIR += py-protobuf4
     SUBDIR += py-proxmoxer
+    SUBDIR += py-psygnal
     SUBDIR += py-ptable
     SUBDIR += py-ptpython
     SUBDIR += py-ptvsd
