devel/py-pytest-instafail: Add py-pytest-instafail 0.5.0
pytest-instafail is a plugin for pytest that shows failures and errors instantly
instead of waiting until the end of test session.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5598,6 +5598,7 @@
     SUBDIR += py-pytest-httpbin
     SUBDIR += py-pytest-httpserver
     SUBDIR += py-pytest-httpx
+    SUBDIR += py-pytest-instafail
     SUBDIR += py-pytest-isort
     SUBDIR += py-pytest-jupyter
     SUBDIR += py-pytest-lazy-fixture
