databases/rubygem-activemodel72: Add rubygem-activemodel72 7.2.1
Active Model provides a known set of interfaces for usage in model classes. They
allow for Action Pack helpers to interact with non-Active Record models, for
example. Active Model also helps with building custom ORMs for use outside of
the Rails framework.

Active Model provides a default module that implements the basic API required to
integrate with Action Pack out of the box: ActiveModel::API.

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -914,6 +914,7 @@
     SUBDIR += rubygem-activemodel61
     SUBDIR += rubygem-activemodel70
     SUBDIR += rubygem-activemodel71
+    SUBDIR += rubygem-activemodel72
     SUBDIR += rubygem-activerecord-explain-analyze
     SUBDIR += rubygem-activerecord-import
     SUBDIR += rubygem-activerecord-jdbc-adapter
