devel/rubygem-actionview72: Add rubygem-actionview72 7.2.1
Action View is a framework for handling view template lookup and rendering, and
provides view helpers that assist when building HTML forms, Atom feeds and more.
Template formats that Action View handles are ERB (embedded Ruby, typically used
to inline short Ruby snippets inside HTML), and XML Builder.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6306,6 +6306,7 @@
     SUBDIR += rubygem-actionview61
     SUBDIR += rubygem-actionview70
     SUBDIR += rubygem-actionview71
+    SUBDIR += rubygem-actionview72
     SUBDIR += rubygem-active_hash
     SUBDIR += rubygem-active_scaffold
     SUBDIR += rubygem-activejob4
