devel/rubygem-activesupport72: Add rubygem-activesupport72 7.2.1
Active Support is a collection of utility classes and standard library
extensions that were found useful for the Rails framework. These additions
reside in this package so they can be loaded as needed in Ruby projects outside
of Rails.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6328,6 +6328,7 @@
     SUBDIR += rubygem-activesupport61
     SUBDIR += rubygem-activesupport70
     SUBDIR += rubygem-activesupport71
+    SUBDIR += rubygem-activesupport72
     SUBDIR += rubygem-airborne
     SUBDIR += rubygem-akismet
     SUBDIR += rubygem-algebrick
