--- a/mail/Makefile
+++ b/mail/Makefile
@@ -597,6 +597,7 @@
     SUBDIR += rubygem-actionmailbox61
     SUBDIR += rubygem-actionmailbox70
     SUBDIR += rubygem-actionmailbox71
+    SUBDIR += rubygem-actionmailbox72
     SUBDIR += rubygem-actionmailer4
     SUBDIR += rubygem-actionmailer5
     SUBDIR += rubygem-actionmailer50
