--- a/net/Makefile
+++ b/net/Makefile
@@ -1252,6 +1252,7 @@
     SUBDIR += rubygem-activestorage61
     SUBDIR += rubygem-activestorage70
     SUBDIR += rubygem-activestorage71
+    SUBDIR += rubygem-activestorage72
     SUBDIR += rubygem-amazon-ec2
     SUBDIR += rubygem-amq-protocol
     SUBDIR += rubygem-amqp
