textproc/rubygem-actiontext72: Add rubygem-actiontext72 7.2.1
Action Text brings rich text content and editing to Rails. It includes the Trix
editor that handles everything from formatting to links to quotes to lists to
embedded images and galleries. The rich text content generated by the Trix
editor is saved in its own RichText model that's associated with any existing
Active Record model in the application. Any embedded images (or other
attachments) are automatically stored using Active Storage and associated with
the included RichText model.

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1752,6 +1752,7 @@
     SUBDIR += rubygem-actiontext61
     SUBDIR += rubygem-actiontext70
     SUBDIR += rubygem-actiontext71
+    SUBDIR += rubygem-actiontext72
     SUBDIR += rubygem-albino
     SUBDIR += rubygem-amatch
     SUBDIR += rubygem-asciidoctor
